iter_language/tests/corpus/invalid/apply-back-discard-with-filter.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: apply-back-discard-with-filter.iter
---
Error: `apply_back.excludes` has no effect when `mode = discard`
   ╭─[apply-back-discard-with-filter.iter:9:16]
   │
 9 │     excludes = ["*.md"]
   │                ────┬───  
   │                    ╰───── `apply_back.excludes` has no effect when `mode = discard`
   │ 
   │ Help: remove the field, or change `mode` from `discard` to `sync` or `merge` so the filter has somewhere to apply.
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[apply-back-discard-with-filter.iter:1:1]
   │
 1 │ queue memory
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
